<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercicio1x3</string>
     <string name="action_settings">Settings</string>
    <string name="this_is_test">This is Test!</string>
    <string name="button1_label">Push Me</string>
    <string name="button2_label">Click Me</string>
    <string name="qtdeButton1">-</string>
    <string name="qtdeButton2">-</string>

</resources>